--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.3.0",
+        "jeremeamia/FunctionParser": "dev-master",
+        "jeremeamia/SuperClosure": "dev-master"
     },
     "suggest": {
     },
